--- a/manual/zh/blender/Shadows.html
+++ b/manual/zh/blender/Shadows.html
@@ -14,8 +14,8 @@
 
     <p>这里描述了在 Verge3D 中为 Blender 设置漂亮实时阴影的设置和最佳实践。</p>
     
-    <iframe class="video-480p" src="https://player.bilibili.com/player.html?aid=48633285&bvid=BV18b411u7yq&cid=85166275&page=1&high_quality=1&danmaku=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
+    <iframe class="video-480p" src="https://player.bilibili.com/player.html?aid=591013212&bvid=BV1tq4y1d7zL&cid=424930607&page=1&high_quality=1&danmaku=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     <h2>内容</h2>
 
     [contents]
