--- a/manual/zh/introduction/AR-VR-development.html
+++ b/manual/zh/introduction/AR-VR-development.html
@@ -46,6 +46,10 @@
 
     <p class="note">WebXR需要启用安全上下文。Verge3D应用必须基于HTTPS/SSL或本地URL运行。</p>
 
+    <p>
+      通过使用 USDZ 资产，您可以在默认的 Safari 浏览器中运行简化的增强现实体验。有关详细信息，请参阅 <a href="manual/zh/puzzles/Scenes.html#export_to_usdz">此处</a> 。
+    </p>
+
     [anchor:Creating_VR_Apps]
 
     <h3>创建VR应用</h3>
