--- a/manual/zh/introduction/App-Manager.html
+++ b/manual/zh/introduction/App-Manager.html
@@ -282,6 +282,30 @@
 
     <p>默认情况下，使用您刚才自定义模板创建的新应用会是一个空文件夹，因为您还没有在其中提供文件。最简单的模板创建方法是直接复制一个现有模板作为基础（例如"Standard Dark"，标准暗调模板)，然后重命名文件夹为您刚才新建的模板名称（例如，"My Template")。</p>
 
+    [anchor:managing_network_directory]
+    <h2>管理网络目录</h2>
+    <p>
+      点击左侧栏的云朵图标，即可打开 Verge3D Network 目录：
+    </p>
+    <img src="files/app-manager/app-manager-open-network.jpg" class="centered">
+    <p>
+      网络目录列出了您之前上传的所有文件、目录或 ZIP 存档：
+    </p>
+    <img src="files/app-manager/app-manager-network-directory.jpg" class="centered">
+    <p>
+      在此页面上，您可以查看项目的大小以及资产上传到 Verge3D 网络的日期/时间（当地时区）。 对于目录，日期/时间信息对应于最近上传的子元素（文件或其他目录）。
+    </p>
+    <p class="note">
+      第一项（“/”）显示了一些重要信息：所有数据占用的总大小，以及上次上传到网络目录的时间。
+    </p>
+    <p>
+      您可以选择（使用复选框）一些项目，然后单击右侧面板上的按钮：
+    </p>
+    <ol>
+      <li>将应用或单个文件下载回本地 Verge3D 发行版目录中。</li>
+      <li>从目录中删除文件。</li>
+    </ol>
+    
     [anchor:App_Manager_Settings]
 
     <h2>应用管理器设置</h2>
