--- a/manual/zh/introduction/Asset-compression.html
+++ b/manual/zh/introduction/Asset-compression.html
@@ -70,13 +70,17 @@
 
     <h2>检查文件</h2>
 
-    <p>若要确认应用现在实际加载的是否为压缩资产，请（从应用管理器或部署应用的网站）运行应用，打开浏览器控制台并切换到 <strong>网络</strong> 选项卡。</p>
-    
+    <p>
+      若要确认应用现在实际加载的是否为压缩资产，请（从应用管理器或部署应用的网站）运行应用，打开浏览器控制台并切换到 <strong>网络</strong> 选项卡。打开 <a href="manual/zh/introduction/FAQ.html#browser_console">浏览器控制台</a> 并切换到 <strong>网络</strong> 标签。
+    </p>
+
     <img src="files/asset_compression/console-check.jpg" class="centered">
 
     <p>重新加载应用以便控制台从头开始显示文件。在列表中找到场景文件——如果一切正常，它们应该以 <strong>.xz</strong> 结尾。</p>
 
-    <p>在Windows和Linux平台，Chrome，Firefox浏览器的控制台一般可用F12快捷键打开。在Mac电脑中，Chrome使用 View > Developer > JavaScript控制台菜单（快捷键：Option-Cmd-J）开启，Safari需使用 Developer > Show Error Console菜单（快捷键：Option-Cmd-C）开启浏览器控制台。</p>
+    <p>
+      或者，您可以使用 <a href="manual/zh/introduction/Performance-Bottlenecks.html#performance_profile">性能概况(performance profile)</a> 功能检查是否启用了压缩资产。
+    </p>
 
     [anchor:Code_Based_or_Player_Based_Apps]
 
