--- a/manual/zh/introduction/Creating-Mobile-Apps.html
+++ b/manual/zh/introduction/Creating-Mobile-Apps.html
@@ -17,8 +17,8 @@
 
     <h1>使用Apache Cordova创建手机应用 </h1>
 
-    <p>Apache
-      Cordova是一个可以将网页应用打包成为跨平台手机应用的工具。Cordova主要用于为Android和iOS平台创建应用程序，但也可以开发Windows、macOS和Linux应用程序。该工具完全免费，易于使用，并允许用JavaScript进行高级定制（如果需要）。
+    <p>
+        Apache Cordova是一个可以将网页应用打包成为跨平台手机应用的工具。Cordova主要用于为Android和iOS平台创建应用程序，但也可以开发Windows、macOS和Linux应用程序。该工具完全免费，易于使用，并允许用JavaScript进行高级定制（如果需要）。
     </p>
 
     [contents] [anchor:preliminary_considerations]
@@ -43,11 +43,9 @@
 
     <h2>Apache Cordova入门</h2>
 
-    <p>要使用 Cordova，您需要 *npm* 实用程序，它是*node.js*运行时的一部分。您可以参照 <a href="https://nodejs.org/en/download/"
-        target="_blank">如下说明</a>安装 *npm* 。</p>
+    <p>要使用 Cordova，您需要 *npm* 实用程序，它是*node.js*运行时的一部分。您可以参照 <a href="https://nodejs.org/en/download/" target="_blank">如下说明</a> 安装 *npm* 。</p>
 
-    <p class="notes">对于Linux，推荐您通过软件包管理器获取npm。参见 <a href="https://nodejs.org/en/download/package-manager/"
-        target="_blank">这里</a> 了解详情。</p>
+    <p class="note">对于Linux，推荐您通过软件包管理器获取npm。参见 <a href="https://nodejs.org/en/download/package-manager/" target="_blank">这里</a> 了解详情。</p>
 
     <p>安装npm后，可使用以下命令来安装Cordova二进制文件。</p>
 
