--- a/manual/zh/introduction/Features.html
+++ b/manual/zh/introduction/Features.html
@@ -9,39 +9,37 @@
   <script src="page.js"></script>
   <link type="text/css" rel="stylesheet" href="page.css" />
   <style>
-    table,
-    td,
-    th {
-      border: 1px solid #2194CE;
-      border-collapse: collapse;
-      padding: 10px;
+    table, td, th !important {
       text-align: left;
       min-width: 180px;
       font-size: 16px;
     }
-
     table {
+      width:100%;
       margin-bottom: 20px;
     }
-
     th {
-      text-align: center;
-      text-decoration: none;
-      color: #0b7188;
       font-size: 17px;
-      font-family: 'Oswald', sans-serif;
-      font-weight: normal;
     }
-
+    th:nth-of-type(1) {
+      width: 10%
+    }
+    th:nth-of-type(2) {
+      width: 30%
+    }
+    th:nth-of-type(3) {
+      width: 30%
+    }
+    th:nth-of-type(4) {
+      width: 30%
+    }
     td ul {
       margin: 10px 0px;
       padding-left: 20px;
     }
-
     td {
       vertical-align: top;
     }
-
     td.centered {
       text-align: center;
     }
@@ -92,7 +90,7 @@
 
     <h2>功能和需求</h2>
 
-    <table style="width:100%">
+    <table>
 
       <tr id="feature_dcc">
         <th rowspan=3>内容创建</th>
@@ -102,13 +100,13 @@
       </tr>
 
       <tr>
-        <td class="centered">Blender 2.80-2.93</td>
+        <td class="centered">Blender 2.80-3.2</td>
         <td class="centered">Autodesk 3ds Max 2019-2022</td>
         <td class="centered">Autodesk Maya 2018-2022</td>
       </tr>
 
       <tr>
-        <td colspan=3>此外，您可以使用任何支持导出为glTF 2.0格式的建模套件，以及任何支持导出这 <a href="manual/zh/introduction/Features.html#feature_import_formats">20余种格式</a> 包括FBX，OBJ，COLLADA和3DS等）的3D图形软件。</td>
+        <td colspan=3>此外，您可以使用任何支持导出为glTF 2.0格式的建模套件，以及任何支持导出这 <a href="manual/zh/introduction/Features.html#feature_import_formats">20余种格式</a> 包括USDZ, FBX，OBJ，COLLADA和3DS等）的3D图形软件。</td>
       </tr>
 
       <tr id="feature_materials">
@@ -161,6 +159,7 @@
             </li>
             <li>通过世界着色节点实现的基于图像的照明</li>
             <li>立方体反射光照探头</li>
+            <li>平面反射光照探头</li>
           </ul>
         </td>
         <td>
@@ -180,6 +179,7 @@
             </li>
             <li>通过环境贴图实现的基于图像的照明</li>
             <li>立方体反射光照探头</li>
+            <li>平面反射光照探头</li>
         </td>
         <td>
           <ul>
@@ -194,6 +194,7 @@
             </li>
             <li>通过aiSkyDomeLight（球天灯光）实现的基于图像的照明
             <li>立方体反射光照探头</li>
+            <li>平面反射光照探头</li>
           </ul>
         </td>
       </tr>
@@ -243,6 +244,7 @@
             <li>RGB/值节点动画。</li>
             <li>形态键（变形）动画。形态键或变形目标动画。</li>
             <li>基于 <a href="manual/zh/puzzles/Animation.html#animate_param">animate param(动画参数)</a> 拼图的高级程序动画。</li>
+            <li>动画约束： 复制位置, 复制旋转, 复制缩放, 复制变换, 限定距离, 限定位置, 限定旋转, 限定缩放, 阻尼追踪, 锁定追踪, 追踪到, 基面。</li>
           </ul>
         </td>
         <td>
@@ -251,6 +253,7 @@
             <li>对象变化动画，包括位移、旋转和比例。</li>
             <li>材质控制器动画。支持浮点与颜色参数。</li>
             <li>基于 <a href="manual/zh/puzzles/Animation.html#animate_param">animate param(动画参数)</a> 拼图的高级程序动画。</li>
+            <li>动画约束： 位置约束， 注视约束， 方向约束。</li>
           </ul>
         </td>
         <td>
@@ -260,6 +263,7 @@
             <li>材质参数动画。</li>
             <li>混合形状动画，也称之为融合变形动画。</li>
             <li>基于 <a href="manual/zh/puzzles/Animation.html#animate_param">animate param(动画参数)</a> 拼图的高级程序动画。</li>
+            <li>动画约束： 父子约束, 点, 方向, 比例, 目标。</li>
           </ul>
         </td>
       </tr>
@@ -313,6 +317,7 @@
             <li>任意网络托管服务商（例如GoDaddy，DigitalOcean，Amazon AWS，腾讯云，阿里云等）。</li>
             <li><a href="https://www.soft8soft.com/verge3d-network/" target="_blank">Verge3D Network</a>，Verge3D云托管服务。中国大陆地区访问受限，请咨询我们的中国区技术代表咨询解决方案。
             </li>
+            <li><a href="manual/zh/introduction/Creating-SCORM-Courses.html">SCORM-compliant</a> learning-management systems (LMS) such as Moodle, Chamilo, SCORM Cloud, CANVAS, iSpring, etc.</li>
             <li>通过 <a href="manual/zh/introduction/Creating-Mobile-Apps.html">打包</a> Verge3D app为移动应用的方式，发布到Google Play应用商店或Apple App Store。</li>
             <li>使用 <a href="manual/zh/introduction/Creating-Desktop-Apps.html">Electron</a> 框架构建的独立桌面应用或移动应用。</li>
           </ul>
@@ -335,7 +340,17 @@
 
       <tr id="feature_postprocessing">
         <th>后期处理效果</th>
-        <td colspan=3>以下效果可以 <a href="manual/zh/puzzles/Postprocessing.html">通过拼图启用</a>：
+        <td colspan=3>
+          如下效果可在三维软件中启用并导出：
+          <ul><li>
+            环境光遮蔽 (GTAO) - 参见
+            <a href="manual/zh/blender/Lighting-and-Rendering.html#ambient_occlusion">Blender</a> /
+            <a href="manual/zh/max/Lighting-and-Rendering.html#ambient_occlusion">Max</a> /
+            <a href="manual/zh/maya/Lighting-and-Rendering.html#ambient_occlusion">Maya</a>
+            手册章节
+          </li>
+        </ul>
+        此外，以下效果可以 <a href="manual/zh/puzzles/Postprocessing.html">通过拼图启用</a>：
           <ul>
             <li>环境遮蔽(AO)</li>
             <li>辉光(Bloom)</li>
@@ -377,7 +392,14 @@
 
       <tr id="feature_ar">
         <th>增强现实</th>
-        <td colspan=3>可运行于已经安装了ARCore（面向AR的Google Play服务）的Android系统的Chrome浏览器中，或iOS版本的WebXR Viewer应用中。</td>
+        <td colspan=3>
+          <p>
+            可运行于已经安装了ARCore（面向AR的Google Play服务）的Android系统的Chrome浏览器中，或iOS版本的WebXR Viewer应用中。
+          </p>
+          <p>
+            此外，您可以使用 USDZ 格式在 iOS/iPadOS 上的默认 Safari 浏览器中运行简化的 AR 模式。
+          </p>
+        </td>
       </tr>
 
       <tr id="feature_shaders">
@@ -439,6 +461,7 @@
             <li><a href="https://cdn.soft8soft.com/demo/applications/augmented_reality/augmented_reality.html" target="_blank">Augmented Reality</a> — 增强现实：演示了WebAR的基本功能。</li>
             <li><a href="https://cdn.soft8soft.com/demo/applications/clipping_planes/clipping_planes.html" target="_blank">Clipping Planes</a> — 剪切平面：展示了如何将剪切平面（又称横截面或平面剖面）用于工程可视化和科学可视化。</li>
             <li><a href="https://cdn.soft8soft.com/demo/applications/custom_image/custom_image.html" target="_blank">Custom Image</a> — 自定义图片：一个虚拟相框，允许上传、存储和分享图片。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/player/player.html?load=../applications/e-learning/e-learning.gltf&logic=../applications/e-learning/visual_logic.js" target="_blank">E-Learning</a> — 一个简单的电子学习类课件应用。</li>
             <li><a href="https://cdn.soft8soft.com/demo/applications/global_illumination/global_illumination.html" target="_blank">Global Illumination</a> — 全局照明：一个具有高级照明效果的室内演示（如动态立方体反射光照探头和区域光）。</li>
             <li><a href="https://cdn.soft8soft.com/demo/applications/farmers_journey/index.html" target="_blank">Farmer's Journey</a> — 农民的旅行： 无编程制作的浏览器游戏。</li>
             <li><a href="https://cdn.soft8soft.com/demo/applications/industrial_robot/index.html" target="_blank">Industrial Robot VR</a> — 工业机器人：具有VR和AR特性的交互式机器人展示。</li>
@@ -447,7 +470,7 @@
             <li><a href="https://cdn.soft8soft.com/demo/applications/parametric_models/index.html" target="_blank">Parametric Models</a> — 参数化模型：可执行模型参数化变换的3D配置器。</li>
             <li><a href="https://cdn.soft8soft.com/demo/applications/pbr/pbr.html" target="_blank">PBR</a> — glTF 2.0兼容性材质演示案例。</li>
             <li><a href="https://cdn.soft8soft.com/demo/applications/recliner/index.html" target="_blank">Recliner</a> — 可调节沙发：3D配置器，一个开箱即用的电子商务案例。</li>
-            <li><a href="https://cdn.soft8soft.com/demo/player/player.html?load=../applications/ring/ring.gltf" target="_blank">Ring</a> — 戒指：简单的3D戒指定制应用，演示动态报价与在线下单功能。</li>
+            <li><a href="https://cdn.soft8soft.com/demo/player/player.html?load=../applications/ring/ring.gltf&logic=../applications/ring/visual_logic.js" target="_blank">Ring</a> — 戒指：简单的3D戒指定制应用，演示动态报价与在线下单功能。</li>
             <li><a href="https://cdn.soft8soft.com/demo/applications/scooter/index.html" target="_blank">Scooter</a> — 电动车：先进的3D配置器，具有真实质感的PBR材质，可组合出上百万的配置结果。</li>
             <li><a href="https://cdn.soft8soft.com/demo/applications/scroll_animation/scroll_animation.html" target="_blank">Scroll Animation</a> — 滚动动画：通过触发3D模型动画实现网页滚动时的动态交互效果。</li>
             <li><a href="https://cdn.soft8soft.com/demo/applications/simple_configurator/simple_configurator.html" target="_blank">Simple Configurator</a> — 简单配置器：电商基础教程案例。</li>
