--- a/manual/zh/introduction/Updating.html
+++ b/manual/zh/introduction/Updating.html
@@ -36,16 +36,15 @@
     <h3>方法#1：使用更新功能自动更新</h3>
 
     <p>只需将整个应用文件夹复制到新安装的Verge3D的 <strong>applications</strong> 文件夹即可。启动应用管理器后，您的应用名称会显示在应用列表中（如果没有，则刷新页面）。单击带有圆形箭头的更新按钮。
-    </p><img src="files/updating/app-manager-update-button.jpg" class="centered" style="max-width: 705px">
+    </p><img src="files/updating/app-manager-update-button.jpg" class="centered" style="max-width: 801px">
     <p>在显示的窗口中，选择您要覆盖的模板文件。如果您未编辑这些文件，则可以安全地选择所有内容。如果您修改了他们，请务必仔细检查，覆盖前请务必备份文件以用于恢复。</p><img
-      src="files/updating/application-update-window.jpg" class="centered" style="max-width: 780px">
-    <p>此操作将在后台覆盖 <strong>/build</strong> 文件夹中的引擎模块, 即Verge3D运行环境 <strong>v3d.js</strong> ，可选IE11兼容模块
-      <strong>ie_compat.js</strong> （如果开启了 *IE 11* 复选框），可选旧版VR兼容模块 <strong>webxr-polyfill.js</strong> （如果在应用创建时开启 了
-      *Legacy VR* 复选框）。如果您做了如图选择，此操作还 用 <strong>/manager/templates/template_name</strong>
-      文件夹中对应模板文件覆盖应用的HTML/CSS/JavaScript文件与 <strong>media</strong> 文件夹中的图标文件。</p>
+      src="files/updating/application-update-window.jpg" class="centered" style="max-width: 540px">
 
-    <p>更新后，应用管理器会将文件的旧版本保存在 <strong>v3d_app_data/update_backup</strong>
-      文件夹中，并添加了时间戳的目录中。这可以允许您在需要时恢复先前保存的拼图版本。只需将文件复制回应用文件夹根目录，并从其名称中删除时间戳既可。</p>
+    <p>此操作将在后台覆盖 <strong>/build</strong> 文件夹中的引擎模块, 即Verge3D运行环境 <strong>v3d.js</strong> （或 <strong>v3d.legacy.js</strong> ，如果开启了 *IE 11* 复选框）及可选兼容模块：
+
+    <p>
+      更新后，应用管理器会将文件的旧版本保存在 <strong>v3d_app_data/update_backup</strong> 文件夹中，并添加了时间戳的目录中。这可以允许您在需要时恢复先前保存的拼图版本。只需将文件复制回应用文件夹根目录，并从其名称中删除时间戳既可。
+    </p>
 
     [anchor:Update_Applications_Clean]
 
@@ -53,12 +52,16 @@
 
     <p>这是当您完全掌控文件时的一种替代方法。您可以用这种方法来删除过时的文件，或者因某些原因自动更新不可用时来手动操作。</p>
 
-    <p>为执行清洁更新，请在在应用管理器的创建新应用窗口输入应用的名称，然后点击新建应用。</p><img src="files/updating/app-manager-create-new.jpg"
-      class="centered" style="max-width: 358px">
-    <p>从原文件夹复制 <strong>.max</strong> ， <strong>.blend</strong> 或 <b>.mb</b> 文件，所有的贴图、声音和拼图场景文件
-      <strong>visual_logic.xml</strong> 到新应用文件夹中（在
-      <strong>verge3d/applications</strong>中）。当系统提示文件已存在时，请选择覆盖。如果你在应用中选择了基于HTML的UI时，请同样拷贝相关文件到目标文件夹。</p><img
-      src="files/updating/files-copy.jpg" class="centered" style="max-width: 1000px">
+    <p>为执行清洁更新，请在在应用管理器的创建新应用窗口输入应用的名称，然后点击新建应用。</p>
+    
+    <img src="files/updating/app-manager-create-new.jpg" class="centered" style="max-width: 573px">
+
+    <p>
+      从原文件夹复制 <strong>.max</strong> ， <strong>.blend</strong> 或 <b>.mb</b> 文件，所有的贴图、声音和拼图场景文件 <strong>visual_logic.xml</strong> 到新应用文件夹中（在 <strong>verge3d/applications</strong> 中）。当系统提示文件已存在时，请选择覆盖。如果你在应用中选择了基于HTML的UI时，请同样拷贝相关文件到目标文件夹。
+    </p>
+    
+    <img src="files/updating/files-copy.jpg" class="centered" style="max-width: 1000px">
+
     <p>最后，您还需要执行glTF的导出，以便其能够跟进最近的更新。如果您的应用中使用了拼图，您需要在拼图编辑器中重新保存场景以生成与最新版引擎匹配的代码。</p>
 
     <p>如果您更改了应用的 .html， .css 或 .js 文件，请记得备份文件，以便后期可以修改。</p>
@@ -83,8 +86,7 @@
 
     <p>在极少数情况下，拼图编辑器在更新后可能无法加载。请重置浏览器设置以修复此问题。请重置浏览器设置以修复此问题。</p>
 
-    <p>如果更新后某些功能出现故障，请在 <a href="https://www.soft8soft.com/forum/bug-reports-and-feature-requests/"
-        target="_blank">论坛</a> 上报告，以便我们调查问题并发布更正版本。</p>
+    <p>如果更新后某些功能出现故障，请在 <a href="https://www.soft8soft.com/forum/bug-reports-and-feature-requests/" target="_blank">论坛</a> 上报告，以便我们调查问题并发布更正版本。</p>
 
 
     <h2>遇到问题？</h2>
