--- a/manual/zh/introduction/Wordpress-Plugin.html
+++ b/manual/zh/introduction/Wordpress-Plugin.html
@@ -8,15 +8,6 @@
   <base href="../../../" />
   <script src="page.js"></script>
   <link type="text/css" rel="stylesheet" href="page.css" />
-  <style>
-    table,
-    th,
-    td {
-      border: 1px solid black;
-      border-collapse: collapse;
-      padding: 10px;
-    }
-  </style>
 </head>
 
 <body>
@@ -232,7 +223,7 @@
 
     <p>下面是可以自定义的模板列表：</p>
 
-    <table style="width:100%">
+    <table>
       <tr>
         <th>模板文件</th>
         <th>说明</th>
@@ -240,15 +231,15 @@
       <tr>
         <td>order_admin_form.php</td>
         <td>WordPress管理仪表板上的订单管理表单。</td>
-        </td>
+        </tr>
       <tr>
         <td>order_email_body.php</td>
         <td>订单电子邮件正文模板。此模板用于发送给您和客户的订单通知。</td>
-        </td>
+        </tr>
       <tr>
         <td>order_email_pdf.php</td>
         <td>订购电子邮件PDF附件模板。此模板用于生成即将被转化为订单邮件中PDF格式附件的HTML文件。</td>
-        </td>
+        </tr>
       <tr>
         <td>order_form.php</td>
         <td>订单表单模板。此表单将在 <strong>
@@ -256,7 +247,7 @@
             [verge3d_order]
 
           </strong> 短代码所在页面中显示给客户：</td>
-        </td>
+        </tr>
       <tr>
         <td>order_success.php</td>
         <td>接受订单时显示的消息。</td>
@@ -264,7 +255,7 @@
       <tr>
         <td>order_failed.php</td>
         <td>拒绝订单时显示的消息。</td>
-        </td>
+        </tr>
     </table>
 
     <h3>安全措施</h3>
@@ -280,7 +271,7 @@
 
     <p>“place order”拼图使用基础协议处理订单。使用带有如下参数的HTTP POST请求，将订单从浏览器发送到服务器：</p>
 
-    <table style="width:100%">
+    <table>
       <tr>
         <th>POST参数</th>
         <th>说明</th>
@@ -304,7 +295,7 @@
     </table><br>
     <p>更高级的基于JSON的协议使用以下一组默认参数：</p>
 
-    <table style="width:100%">
+    <table>
       <tr>
         <th>JSON字段</th>
         <th>说明</th>
