--- a/manual/zh/introduction/Workflow.html
+++ b/manual/zh/introduction/Workflow.html
@@ -189,11 +189,17 @@
     [anchor:Post_processing]
 
     <h2>后期处理</h2>
+    环境光遮蔽（GTAO）可以在 
+    <a href="manual/zh/blender/Lighting-and-Rendering.html#ambient_occlusion">Blender</a> /
+    <a href="manual/zh/max/Lighting-and-Rendering.html#ambient_occlusion">Max</a> /
+    <a href="manual/zh/maya/Lighting-and-Rendering.html#ambient_occlusion">Maya</a> 内启用和导出。
 
-    <p>使用 <a
-        href="manual/zh/puzzles/Postprocessing.html">后期处理拼图</a>可以启用以下效果：bloom（辉光，启用HDR时效果最佳），亮度/对比度，灰度，景深和环境光遮蔽。这些效果的参数可以在运行时更改，也可以通过内部缓存设置以实现高性能的动画。还有一个拼图，可以从场景中删除所有后期效果。
-    </p><img src="files/workflow/post-process-effects.jpg" class="centered" style="max-width: 819px;">
-
+    <p>此外，使用 <a
+        href="manual/zh/puzzles/Postprocessing.html">后期处理拼图</a>可以启用以下效果：bloom（辉光，启用HDR时效果最佳），亮度/对比度，灰度，景深，屏幕空间反射和屏幕空间折射。这些效果的参数可以在运行时更改，也可以通过内部缓存设置以实现高性能的动画。还有一个拼图，可以从场景中删除所有后期效果。
+    </p>
+    
+    <img src="files/workflow/post-process-effects.png" class="centered" style="max-width: 755px;">
+    
     [anchor:Audio_]
 
     <h2>音频</h2>
