--- a/manual/zh/maya/Lighting-and-Rendering.html
+++ b/manual/zh/maya/Lighting-and-Rendering.html
@@ -70,7 +70,7 @@
 
     <h2>立方体反射光照探头(Reflection Cubemap Light Probes)</h2>
 
-    <p>`Verge3D插件增加了一个名为 *v3dReflectionCubemap* 的自定义光照探头对象，可用于通过局部反射立方体贴图对对象施加间接照明。</p>
+    <p>Verge3D插件增加了一个名为 *v3dReflectionCubemap* 的自定义光照探头对象，可用于通过局部反射立方体贴图对对象施加间接照明。</p>
 
     <iframe class="video-480p" src="https://player.bilibili.com/player.html?aid=421064748&bvid=BV1p3411C7zA&cid=425261152&page=1&high_quality=1&danmaku=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
 
@@ -271,7 +271,7 @@
         </dd>
         <dt>Distance</dt>
         <dd>
-          距离：用于计算环境光遮蔽的半径（以系统为单位）。较高的值通过过度变暗和扩大其区域使效果更加明显，但也会降低性能。较低的值会使遮挡不太明显。
+          距离：用于计算环境光遮蔽的半径（以系统为单位）。较高的值通过过度变暗和扩大其区域使效果更加明显，但也会降低性能。较低的值会使遮蔽不太明显。
         </dd>
         <dt>Factor</dt>
         <dd>
